--- a/page2.html
+++ b/page2.html
@@ -80,8 +80,10 @@
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="page%20main.html">HOME</a></li>
+        <li><a href="page main.html">HOME</a></li>
         <li><a href="page1.html">AMENITIES</a></li>
+        <li class="active"><a href="page2.html">ROOMS</a></li>
+        
         <li><a href="page3.html">CONTACT</a></li>
 
       </ul>
